@@ -133,6 +133,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-5442: Add only credentials from setStoreLocation to the Job Conf (maswin via rohini)
+
 PIG-5441: Pig skew join tez grace reducer fails to find shuffle data (yigress via rohini)
 
 PIG-5432: OrcStorage fails to detect schema in some cases (jtolar via rohini)
